--- a/BridgeTS/tsconfig.json
+++ b/BridgeTS/tsconfig.json
@@ -3,9 +3,11 @@
   "include": ["src", "types"],
   "type": "module",
   "compilerOptions": {
-    "module": "esnext",
+    "target":"ES5",
+    "module": "ES2015",
     "lib": ["dom", "esnext"],
     "importHelpers": true,
+    "allowSyntheticDefaultImports": true,
     // output .d.ts declaration files for consumers
     "declaration": true,
     // output .js.map sourcemap files for consumers
