--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "BridgeExperimentTests/gtest"]
-	path = BridgeExperimentTests/gtest
+	path = gtest
 	url = https://github.com/google/googletest.git
